# Plant-Monitor

./: .gitignore  Cargo.toml  README.md  build_proto.sh  deploy.sh
.github/workflows/: main.yml
PlantNode/: platformio.ini
PlantNode/include/: main.h
PlantNode/src/: main.cpp
deploys/postgres/: docker-compose.yml
libs/db_handler/: Cargo.toml
libs/db_handler/examples/: test_connection.rs  test_create_tables.rs
libs/db_handler/src/: db_handler.rs  lib.rs  queries.rs
libs/proto/: Cargo.toml  build.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs
plantNordicNode/: platformio.ini
plantNordicNode/include/: bleHandler.h  plant.h  plantHandler.h
plantNordicNode/src/: bleHandler.cpp  main.c  main.cpp  plant.cpp  plantHandler.cpp
plantServer/: CMakeLists.txt  main.cpp
plantServer/tests/: CMakeLists.txt  example_test.cpp
plantStmNode/: platformio.ini
plantStmNode/include/: config.h  gpio.h  stm32f1xx_it.h  uart.h
plantStmNode/include/handlers/: dataHandler.h  espHandler.h
plantStmNode/src/: config.cpp  gpio.cpp  main.cpp  stm32f1xx_hal_msp.cpp  stm32f1xx_it.cpp  uart.cpp
plantStmNode/src/handlers/: dataHandler.cpp  espHandler.cpp
protobufs/: plant_message.proto
scripts/: build.sh  flash.sh  install.sh
services/ble-reader/: Cargo.toml
services/ble-reader/src/: ble_handler.rs  main.rs
